Assignment 1 done. Still needs some plotting

--- a/Lab2/Widen00_lab2.ipynb
+++ b/Lab2/Widen00_lab2.ipynb
@@ -184,15 +184,10 @@
         "\n",
         "def jacobi_iteration(A, b):\n",
         "  m, n = np.shape(A)\n",
-        "  D = np.diagonal(A)\n",
-        "  print(\"Diagonal = \", D)\n",
         "  x = np.zeros(n)\n",
-        "  k = 5\n",
+        "  k = 20\n",
         "  x_matrix = np.zeros((k, len(x)))\n",
         "  r_vec = np.zeros(k)\n",
-        "  print(m, n)\n",
-        "  print(x_matrix)\n",
-        "  print(r_vec)\n",
         "  for iter in range(k):\n",
         "    for i in range(0, n):\n",
         "      sum = 0\n",
@@ -203,9 +198,7 @@
         "          sum = sum + A[i][j]*x[j]\n",
         "      x[i] = 1/A[i][i] * (b[i] - sum)\n",
         "    x_matrix[iter,:] = x\n",
-        "    print(x)\n",
         "    r = np.linalg.norm(A.dot(x)-b)\n",
-        "    print(r)\n",
         "    r_vec[iter] = r\n",
         "\n",
         "  return(x_matrix, r_vec)\n",
@@ -213,64 +206,75 @@
         "\n",
         "\n",
         "n = 4\n",
-        "m = 4\n",
-        "A = np.random.randint(10, size=(m, n))\n",
-        "y = np.random.randint(10, size=n)\n",
+        "m = n\n",
+        "# Should be diagonally dominant\n",
+        "# Matrix is randomized with zeroes and ones\n",
+        "# The maximum non diagonal sum in each row is n * 1 - 1\n",
+        "max_non_diag = (n * 1) - 1\n",
+        "# This means we must add an identity matrix with at least n * 1 - 1\n",
+        "# on the diagonal according to example 7.6\n",
+        "A = np.random.randint(2, size=(m, n)) + max_non_diag * np.eye(n)\n",
+        "y = np.random.randint(3, size=n)\n",
         "b = A.dot(y)\n",
-        "conv_criterion = np.eye(n) -\n",
+        "D = np.diag(np.diag(A))\n",
+        "D_inv = np.linalg.inv(D)\n",
+        "Mj = np.eye(n) - np.matmul(D_inv, A)\n",
+        "conv_criterion = np.linalg.norm(Mj)\n",
+        "\n",
         "print(\"Input matrix = \", A)\n",
         "print(\"Manufactured solution y = \", y)\n",
         "print(\"b = \", b)\n",
-        "print(A[1][2])\n",
+        "print(\"M = \", Mj)\n",
+        "print(\"Convergence criterion = \", conv_criterion)\n",
+        "\n",
         "x, r = jacobi_iteration(A, b)\n",
-        "print(\"Result matrix x = \", x)\n",
+        "\n",
+        "error_matrix = x - y\n",
+        "error_vec = np.zeros_like(r)\n",
+        "i = 0\n",
+        "for error in error_matrix:\n",
+        "  error_vec[i] = np.linalg.norm(error)\n",
+        "  i += 1\n",
+        "\n",
+        "print(\"Error from manufactured solution y = \",error_vec)\n",
+        "print(\"Result x = \", x[-1])\n",
         "print(\"Result residuals r = \", r)"
       ],
       "metadata": {
         "id": "T18t_NIq30pm",
-        "outputId": "f3d500b6-70f9-4225-c76c-78e2a5bb1b7a",
+        "outputId": "95ec0389-7564-42a4-ba4e-a71507b00fab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Input matrix =  [[5 2 1 0]\n",
-            " [2 3 6 1]\n",
-            " [6 7 4 8]\n",
-            " [8 3 3 7]]\n",
-            "Manufactured solution y =  [3 1 9 9]\n",
-            "b =  [ 26  72 133 117]\n",
-            "6\n",
-            "Diagonal =  [5 3 4 7]\n",
-            "4 4\n",
-            "[[0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0.]]\n",
-            "[0. 0. 0. 0. 0.]\n",
-            "[  5.2         20.53333333 -10.48333333   6.46428571]\n",
-            "82.4299549414855\n",
-            "[ -0.91666667  43.42301587 -54.29384921  22.42083333]\n",
-            "277.9601589925545\n",
-            "[  -1.31043651  125.98771164 -230.10450728   62.83341128]\n",
-            "1064.7764862645126\n",
-            "[ 8.25816799e-01  4.62714000e+02 -9.03405047e+02  2.04638087e+02]\n",
-            "4059.721794100746\n",
-            "[ 7.95409573e-01  1.76206713e+03 -3.46083676e+03  7.43849374e+02]\n",
-            "15421.052953617289\n",
-            "Result matrix x =  [[ 5.20000000e+00  2.05333333e+01 -1.04833333e+01  6.46428571e+00]\n",
-            " [-9.16666667e-01  4.34230159e+01 -5.42938492e+01  2.24208333e+01]\n",
-            " [-1.31043651e+00  1.25987712e+02 -2.30104507e+02  6.28334113e+01]\n",
-            " [ 8.25816799e-01  4.62714000e+02 -9.03405047e+02  2.04638087e+02]\n",
-            " [ 7.95409573e-01  1.76206713e+03 -3.46083676e+03  7.43849374e+02]]\n",
-            "Result residuals r =  [   82.42995494   277.96015899  1064.77648626  4059.7217941\n",
-            " 15421.05295362]\n"
+            "Input matrix =  [[3. 0. 0. 0.]\n",
+            " [0. 3. 1. 1.]\n",
+            " [1. 0. 3. 0.]\n",
+            " [0. 1. 0. 4.]]\n",
+            "Manufactured solution y =  [0 0 1 1]\n",
+            "b =  [0. 2. 3. 4.]\n",
+            "M =  [[ 0.          0.          0.          0.        ]\n",
+            " [ 0.          0.         -0.33333333 -0.33333333]\n",
+            " [-0.33333333  0.          0.          0.        ]\n",
+            " [ 0.         -0.25        0.          0.        ]]\n",
+            "Convergence criterion =  0.6291528696058958\n",
+            "Error from manufactured solution y =  [6.87184271e-01 5.72653559e-02 4.77211299e-03 3.97676083e-04\n",
+            " 3.31396736e-05 2.76163946e-06 2.30136622e-07 1.91780518e-08\n",
+            " 1.59817093e-09 1.33180958e-10 1.10984543e-11 9.24812104e-13\n",
+            " 7.70467405e-14 6.40859352e-15 5.29865820e-16 0.00000000e+00\n",
+            " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
+            "Result x =  [0. 0. 1. 1.]\n",
+            "Result residuals r =  [1.83333333e+00 1.52777778e-01 1.27314815e-02 1.06095679e-03\n",
+            " 8.84130658e-05 7.36775549e-06 6.13979624e-07 5.11649683e-08\n",
+            " 4.26374713e-09 3.55312224e-10 2.96096481e-11 2.46735965e-12\n",
+            " 2.05613304e-13 1.68753900e-14 1.33226763e-15 0.00000000e+00\n",
+            " 0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n"
           ]
         }
       ]
