More code for lab 2

--- a/Lab2/lovisastrange_lab2.ipynb
+++ b/Lab2/lovisastrange_lab2.ipynb
@@ -85,9 +85,9 @@
         "id": "Pdll1Xc9WP0e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 34
         },
-        "outputId": "9e782dc7-4ad0-48f9-d45c-2200e83dec4d"
+        "outputId": "88278ec0-83c6-4203-8268-ba8d85807e52"
       },
       "source": [
         "\"\"\"This program is a template for lab reports in the course\"\"\"\n",
@@ -107,20 +107,20 @@
         "# This template is maintained by Johan Hoffman\n",
         "# Please report problems to jhoffman@kth.se"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'KTH Royal Institute of Technology, Stockholm, Sweden.'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 4
         }
       ]
     },
@@ -170,7 +170,7 @@
         "from matplotlib import axes\n",
         "from mpl_toolkits.mplot3d import Axes3D"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -230,11 +230,71 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "## Inverse of diagonal matrix created from matrix A\n",
+        "\n",
+        "# Input: Matrix A\n",
+        "# Output: Inverse of diagonal of A\n",
+        "\n",
+        "def diag_inverse(A):\n",
+        "\n",
+        "  D_inv = np.zeros(A.shape)\n",
+        "\n",
+        "  for i in range(A.shape[0]):\n",
+        "    for j in range(A.shape[0]):\n",
+        "      if i==j:\n",
+        "        D_inv[i,j] = 1/A[i,j]\n",
+        "\n",
+        "  return D_inv\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9w1xr008XLLk"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Jacobi iteration\n",
+        "\n",
+        "# Input: Matrix A, vector b\n",
+        "# Output: Vector x\n",
+        "\n",
+        "def jacobi_iteration(A,b):\n",
+        "  x = np.zeros(b.shape)\n",
+        "  tolerance = 10**(-10)\n",
+        "\n",
+        "  D_inv = diag_inverse(A)\n",
+        "\n",
+        "  BA = np.matmul(D_inv,A)\n",
+        "  Bb = np.matmul(D_inv,b)\n",
+        "\n",
+        "  r = 1\n",
+        "\n",
+        "  while np.linalg.norm(r)/np.linalg.norm(Bb) > tolerance:\n",
+        "    r = np.matmul(BA,x)\n",
+        "\n",
+        "    r[:] = Bb[:]-r[:]\n",
+        "\n",
+        "    x[:] = x[:] + r[:]\n",
+        "\n",
+        "  return x"
+      ],
       "metadata": {
         "id": "2cMTaW8Nmo7r"
       },
-      "execution_count": null,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "evgXt10Uq-CV"
+      },
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -248,12 +308,173 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Forward substitution (based on algorithm from Lecture 1, slide 55)\n",
+        "\n",
+        "## Input: Lower triangular matrix U, vector b\n",
+        "## Output: solution to Ux = b\n",
+        "\n",
+        "def forward_substitution(L,b):\n",
+        "  n = len(b)\n",
+        "  x = np.zeros(n)\n",
+        "  x[0] = b[0]/L[0,0]\n",
+        "  for i in range(1,n):\n",
+        "    sum = 0\n",
+        "    for j in range(0, i-1):\n",
+        "      sum += L[i,j]*x[j]\n",
+        "    x[i] = (b[i]-sum)/L[i,i]\n",
+        "\n",
+        "  return x"
+      ],
       "metadata": {
-        "id": "rMW9aAsomuV2"
+        "id": "u7gd-5X_ui-H"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Inverse of lower triangular matrix made from A\n",
+        "\n",
+        "# Input: Matrix A, vector B\n",
+        "# Output: Inverse of L, lower triangular part of A\n",
+        "\n",
+        "def lower_inverse_on_vector(A,b):\n",
+        "\n",
+        "  L = np.zeros(A.shape)\n",
+        "  for i in range(A.shape[0]):\n",
+        "    for j in range(A.shape[0]):\n",
+        "      if j<= i:\n",
+        "        L[i,j] = A[i,j]\n",
+        "  print(L)\n",
+        "  L_inverse_b = forward_substitution(L,b)\n",
+        "  print(L_inverse_b)\n",
+        "  return L_inverse_b\n",
+        "\n",
+        "lower_inverse_on_vector(np.array([[1,2,3],[4,5,6],[7,8,9]]),np.array([1,0,0]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6esQ0Rrn07v7",
+        "outputId": "ce39e6f9-02f5-4192-ba88-c57e6e9ce89a"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 0. 0.]\n",
+            " [4. 5. 0.]\n",
+            " [7. 8. 9.]]\n",
+            "[ 1.          0.         -0.77777778]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1.        ,  0.        , -0.77777778])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "R17MYJ4L21VH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "## Gauss Seidel iteration\n",
+        "\n",
+        "# Input: Matrix A, vector b\n",
+        "# Output: Vector x\n",
+        "\n",
+        "def gauss_seidel_iteration(A,b):\n",
+        "  x = np.zeros(b.shape)\n",
+        "  tolerance = 10**(-10)\n",
+        "\n",
+        "  BA = np.zeros(A.shape)\n",
+        "\n",
+        "  for col in range(A.shape[0]):\n",
+        "    BA[:,col] = lower_inverse_on_vector(A,np.transpose(A)[col])\n",
+        "\n",
+        "  print(BA)\n",
+        "\n",
+        "  Bb = lower_inverse_on_vector(A,b)\n",
+        "\n",
+        "  r = 1\n",
+        "\n",
+        "  while np.linalg.norm(r)/np.linalg.norm(Bb) > tolerance:\n",
+        "    r = np.matmul(BA,x)\n",
+        "\n",
+        "    r[:] = Bb[:]-r[:]\n",
+        "\n",
+        "    x[:] = x[:] + r[:]\n",
+        "\n",
+        "  print(x)\n",
+        "  return x\n",
+        "\n",
+        "gauss_seidel_iteration(np.array([[10,-1,1],[0,5,2],[1,2,14]]),np.array([1,1,0]))"
+      ],
+      "metadata": {
+        "id": "rMW9aAsomuV2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "75aae335-3800-4cf7-da15-7500a6a36bf7"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[10.  0.  0.]\n",
+            " [ 0.  5.  0.]\n",
+            " [ 1.  2. 14.]]\n",
+            "[1. 0. 0.]\n",
+            "[[10.  0.  0.]\n",
+            " [ 0.  5.  0.]\n",
+            " [ 1.  2. 14.]]\n",
+            "[-0.1   1.    0.15]\n",
+            "[[10.  0.  0.]\n",
+            " [ 0.  5.  0.]\n",
+            " [ 1.  2. 14.]]\n",
+            "[0.1        0.4        0.99285714]\n",
+            "[[ 1.         -0.1         0.1       ]\n",
+            " [ 0.          1.          0.4       ]\n",
+            " [ 0.          0.15        0.99285714]]\n",
+            "[[10.  0.  0.]\n",
+            " [ 0.  5.  0.]\n",
+            " [ 1.  2. 14.]]\n",
+            "[ 0.1         0.2        -0.00714286]\n",
+            "[ 0.12557427  0.21592649 -0.03981623]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.12557427,  0.21592649, -0.03981623])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -267,36 +488,66 @@
     {
       "cell_type": "code",
       "source": [
+        "def f(x,type):\n",
+        "  if type == \"derivative\":\n",
+        "    return -2*x + 1\n",
+        "  else:\n",
+        "    return -x**2 + x + 3"
+      ],
+      "metadata": {
+        "id": "uCwVvaMXzolI"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "## Newtons method\n",
         "\n",
         "# Input: Function f, starting guess x0\n",
         "# Output: Approximate root x\n",
         "\n",
-        "def newtons_method(f,x0):"
+        "def newtons_method(f,x0):\n",
+        "  x = x0\n",
+        "  tolerance = 10**(-4)\n",
+        "\n",
+        "  while abs(f(x,\"func\")) > tolerance:\n",
+        "    x = x - f(x,\"func\")/f(x,\"derivative\")\n",
+        "\n",
+        "  return x\n",
+        "\n",
+        "newtons_method(f,-1)"
       ],
       "metadata": {
-        "id": "3CMDOGbbm0w6"
+        "id": "3CMDOGbbm0w6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "98768ccb-2721-4239-b493-ac828c1e7c15"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Newton's method for vector nonlinear equation??"
-      ],
-      "metadata": {
-        "id": "nWEMCU1Pm1YV"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "rUpdVcFSm7Yf"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.11111111111111072\n",
+            "0.0009182736455461971\n",
+            "6.484525449934608e-08\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1.3027756557168322"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "markdown",
